# c2ba-cmake

./: README.md
templates/simple_app/: CMakeLists.txt
